--- a/public/test.html
+++ b/public/test.html
@@ -13,30 +13,35 @@
 
 </head>
 
-<body style="height: 100vh; background-color: black; color: whitesmoke; ">
+<body style="background-color: black;">
     <div id="app" v-cloak style="padding:0 20px 0 20px;">
+        <!-- Đã đăng nhập -->
         <div v-if="loggedIn===null" class="animated fadeIn">
             <br>
-            <h3> Đang tải ... </h3>
+            <h3 style="color:white">⚙️ Đang tải ... </h3>
         </div>
         <div v-else class="animated fadeIn">
             <div v-if="loggedIn" class="animated fadeIn">
                 <button @click="logOut">Đăng xuất 🔓</button>
                 <hr>
-                <el-row :gutter="20">
-                    <div>
+                <!-- Tab -->
+                <el-tabs v-model="activeName" type="border-card" style="border-radius: 5px;">
+                    <el-tab-pane label="Thông tin ⭐" name="first">
                         <!-- Thông tin người dùng -->
-                        <el-col :sm="24" :md="4">
-                            <p> Xin chào : "{{userInfo.username}}" 👋 </p>
+                        <div class="animated fadeInDown">
+                            <p> Người dùng hiện tại: "{{userInfo.username}}" 👋 </p>
                             <p> id: "{{userInfo.id}}" 👓</p>
                             <p>🚩 Role : </p>
                             <div v-if="!loading.role">
                                 <div v-if="userInfo.role.length > 0">
-                                    <li v-for="role in userInfo.role" class="animated fadeIn">
+                                    <li v-for="role in userInfo.role">
                                         {{ role }} 🍀
                                     </li>
                                     <br>
-                                    <button @click="checkUserAllRole">🔄 Cập nhật lại danh sách role  </button>
+                                    <button @click="checkUserAllRole">
+                                        🔄 Cập nhật lại danh sách role của {{userInfo.username}}
+                                    </button>
+                                    <br><br>
                                 </div>
                                 <div v-else class="animated infinite fadeIn">
                                     <p> Đang tải ... </p>
@@ -44,80 +49,97 @@
 
                             </div>
                             <div v-else class="animated infinite fadeIn">
-                                <p>Đang tải thông tin role ...</p>
+                                <p>Đang tải thông tin role của {{userInfo.username}} ...</p>
                             </div>
-                        </el-col>
+                        </div>
                         <!-- Thông tin người dùng -->
+                    </el-tab-pane>
+                    <el-tab-pane label="Chỉnh sửa Role ⚒" name="second">
                         <!--  Chỉnh sửa role -->
-                        <el-col :sm="24" :md="20">
-                            <div v-if="roleInput.roleList.length > 0">
-                                <form>
-                                    <p>Chọn role: ⚖️</p>
+                        <el-row :gutter="30" class="animated fadeInDown">
+                            <div v-if="!loading.checkRole">
+                                <el-col :sm="12" :md="8">
+                                    <div v-if="roleInput.roleList.length > 0">
+                                        <p>Chọn tài khoản </p>
+                                        <input v-model="roleInput.userName" type="text" style="width: 100%">
+                                        <br> <br>
+                                        <button @click="checkUserInRole_Cloud">
+                                       ❓ Kiểm tra danh sách role của  "{{roleInput.userName}}"
+                                        </button>
+                                    </div>
+                                    <div v-else class="animated infinite flash">
+                                        <p>Đang tải dữ liệu ...</p>
+                                    </div>
+                                </el-col>
+
+                                <el-col :sm="12" :md="8">
+                                    <p>Chọn role :</p>
                                     <select v-model="roleInput.roleSelect" style="width: 100%">
                                     <option v-for="roleName in roleInput.roleList">{{roleName}}</option>
                                     </select>
-                                    <p>Tài khoản 😃</p>
-                                    <input v-model="roleInput.userName" type="text" style="width: 100%">
-                                </form>
-                                <br>
-                                <div v-if="!loading.checkRole" class="animated fadeIn">
+                                    <br><br>
+
                                     <button @click="editUserInRole_Cloud('add')">
-                                     Thêm +
+                                     Thêm "{{roleInput.userName}}" vào "{{roleInput.roleSelect}}" +
                                     </button>
+                                    <br> <br>
+
                                     <button @click="editUserInRole_Cloud('remove')">
-                                       Xóa -
+                                       Xóa "{{roleInput.userName}}" trong "{{roleInput.roleSelect}}" -
+                                    </button>
+                                </el-col>
+
+
+                                <el-col :sm="12" :md="8">
+                                    <p>Cập nhật role : </p>
+                                    <button @click="deleteRole_Cloud">
+                                            Xóa role "{{roleInput.roleSelect}}" ⛔️
                                     </button>
                                     <br><br>
-                                    <button @click="checkUserInRole_Cloud">
-                                       ❓Kiểm tra role [{{roleInput.userName}}] 
-                                    </button>
-                                    <div v-if="roleInput.roleSelect!=='admin'&&
-                                    roleInput.roleSelect!=='mod'&& roleInput.roleSelect!=='creator' ">
-                                        <br>
-                                        <button @click="deleteRole_Cloud">
-                                            Xóa role "{{roleInput.roleSelect}}" ⛔️
-                                         </button>
-                                    </div>
-                                    <div>
-                                        <br>
-                                        <button @click="addRole_Cloud">
+                                    <button @click="addRole_Cloud">
                                        Tạo thêm role  🔮
                                     </button>
-
-                                    </div>
-                                </div>
-                                <div v-else class="animated infinite flash">
-                                    <p>Đang thực hiện ...</p>
-                                </div>
-
+                                </el-col>
                             </div>
                             <div v-else class="animated infinite flash">
-                                <p>Đang tải dữ liệu ...</p>
+                                <h3>Đang tải dữ liệu ...</h3>
                             </div>
-                        </el-col>
+                        </el-row>
+                        <br><br>
                         <!--  Chỉnh sửa role -->
-                    </div>
-                </el-row>
+                    </el-tab-pane>
+                    <el-tab-pane label="Cài đặt ⚙" name="third">
+                        <div class="animated fadeInDown">
+                            <p>Mật khẩu quản trị (masterKey) 🔑 </p>
+                            <input type="password" v-model="userInput.masterKey">
+                        </div>
+                        <br><br>
+                    </el-tab-pane>
+                    <el-tab-pane label="..." name="fourth">Đang cập nhật <br><br></el-tab-pane>
+                </el-tabs>
+                <!-- Tab -->
             </div>
+            <!-- Đã đăng nhập -->
+            <!-- Chưa đăng nhập -->
             <div v-else class="animated fadeInDown">
                 <br>
-                <h3> {{hello}} </h3>
+                <h3 style="color:white"> {{hello}} </h3>
                 <hr>
                 <div v-if="!loading.login">
                     <form>
-                        <p>😃 Tên người dùng:</p>
+                        <p style="color:white">🔒 Tên người dùng:</p>
                         <input type="text" v-model="userInput.name">
-                        <p>🔑 Mật khẩu:</p>
+                        <p style="color:white">🔑 Mật khẩu:</p>
                         <input type="password" v-model="userInput.pass">
                     </form>
                     <br>
                     <button @click="logIn">Đăng nhập 🔒</button>
                 </div>
                 <div v-else class="animated flipInX">
-                    <p>Tiến hành đăng nhập ...</p>
+                    <h3 style="color:white">🔐 Tiến hành đăng nhập ...</p>
                 </div>
-
             </div>
+            <!-- Chưa đăng nhập -->
         </div>
     </div>
     <script src="/public/assets/alertMod.js"></script>
