--- a/public/test.html
+++ b/public/test.html
@@ -14,7 +14,7 @@
 </head>
 
 <body style="background-color: black;">
-    <div id="app" v-cloak style="padding:0 20px 0 20px;">
+    <div id="app" v-cloak>
         <!-- Đã đăng nhập -->
         <div v-if="loggedIn===null" class="animated fadeIn">
             <br>
@@ -54,13 +54,13 @@
                         </div>
                         <!-- Thông tin người dùng -->
                     </el-tab-pane>
-                    <el-tab-pane label="Chỉnh sửa Role ⚖️" name="second">
+                    <el-tab-pane label="Chỉnh sửa Role ✏️" name="second">
                         <!--  Chỉnh sửa role -->
                         <el-row :gutter="30" class="animated fadeInDown">
                             <div v-if="!loading.checkRole">
                                 <el-col :sm="12" :md="8">
                                     <div v-if="roleInput.roleList.length > 0">
-                                        <p>Chọn tài khoản </p>
+                                        <p>Nhập tài khoản: </p>
                                         <input v-model="roleInput.userName" type="text" style="width: 100%">
                                         <br> <br>
                                         <button @click="checkUserInRole_Cloud">
@@ -108,7 +108,7 @@
                         <br><br>
                         <!--  Chỉnh sửa role -->
                     </el-tab-pane>
-                    <el-tab-pane label="Cài đặt 🔧" name="third">
+                    <el-tab-pane label="Cài đặt 🔑" name="third">
                         <div class="animated fadeInDown">
                             <p>Mật khẩu quản trị (masterKey) 🔑 </p>
                             <input type="password" v-model="userInput.masterKey">
