Update logic and improve admin page :zap:

--- a/public/test.html
+++ b/public/test.html
@@ -80,12 +80,12 @@
                                     <br><br>
 
                                     <button @click="editUserInRole_Cloud('add')">
-                                     Thêm "{{roleInput.userName}}" vào "{{roleInput.roleSelect}}" +
+                                     Thêm "{{roleInput.userName}}" vào "{{roleInput.roleSelect}}" 
                                     </button>
                                     <br> <br>
 
                                     <button @click="editUserInRole_Cloud('remove')">
-                                       Xóa "{{roleInput.userName}}" trong "{{roleInput.roleSelect}}" -
+                                       Xóa "{{roleInput.userName}}" trong "{{roleInput.roleSelect}}" 
                                     </button>
                                 </el-col>
 
