Update logic and improve admin page :star2:

--- a/public/role.html
+++ b/public/role.html
@@ -101,8 +101,8 @@
                                     </button>
                                 </el-col>
                             </div>
-                            <div v-else class="animated infinite flash">
-                                <h3>Đang tải dữ liệu ...</h3>
+                            <div v-else class="animated infinite ">
+                                <h3>😎 Đang tải dữ liệu ...</h3>
                             </div>
                         </el-row>
                         <br><br>
@@ -146,7 +146,7 @@
     <script src="/public/assets/js/vue.js"></script>
     <script src="/public/assets/js/vue-element.js"></script>
     <script src="/public/assets/js/parse.min.js"></script>
-    <script src="/public/assets/js/script.js"></script>
+    <script src="/public/assets/vue-controller/role.js"></script>
 
 </body>
 
