Update cloud code, publish page :star2:

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <div class="video-background">
+    <div id="youtube_background" class="video-background">
         <div class="video-foreground">
             <iframe src="https://www.youtube.com/embed/xmEhX5Ourzw?autoplay=1&iv_load_policy=3&loop=1&cc_load_policy=1rel=0&amp;controls=0&amp;showinfo=0&playlist=xmEhX5Ourzw" frameborder="0" allowfullscreen></iframe>
         </div>
