Update cloud code, publish page :star2:

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
         <hr>
         <div class="animated fadeInLeft">
             <h2 style="color: white">Nút bấm</h2>
-            <button class="animated zoomIn">Mặc định </button>
+            <button class="">Mặc định </button>
             <button class="normal">Bình thường</button>
             <button class="danger">Cảnh báo</button>
             <button class="success">Đồng ý</button>
