--- a/public/role.html
+++ b/public/role.html
@@ -18,7 +18,7 @@
 </head>
 
 <body style="background-color: black;">
-    <a href="/">#Home</a> <a href="/role">#Role</a> <a href="/admin">#Admin</a>
+    <a href="/">#Trang chủ </a> <a href="/role">#Role</a> <a href="/admin">#Admin</a>
     <hr>
     <div id="app" v-cloak>
 
