Update test page :star:

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>😃 Happier comming soon ...</title>
+    <title>😃 Happier coming soon ...</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa&amp;subset=vietnamese" rel="stylesheet">
@@ -25,9 +25,9 @@
     </div>
     <div id="app" style="display: none">
 
-        <div style="padding: 3em 0 0 0; font-size: 1em;">
+        <div style="padding: 3em 0 0 0; font-size: 1.2em;">
             <h1 style="color: white" class="animated zoomIn">Happier</h1>
-            <h1 style="color: white" class="animated zoomIn">comming soon ...</h1>
+            <h1 style="color: white" class="animated zoomIn">coming soon ...</h1>
         </div>
         <a href="https://www.facebook.com/groups/478149815856178"> <button class="info"> Facebook</button></a>
         <br>
